--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^6.1.8",
@@ -17,16 +19,21 @@
     "antd": "^5.22.2",
     "assert": "^2.1.0",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
+    "emoji-picker-react": "^4.12.0",
     "framer-motion": "^11.11.17",
     "https-browserify": "^1.0.0",
     "ionicons": "^7.4.0",
     "jwt-decode": "^4.0.0",
+    "randomcolor": "^0.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-motion-animate": "^1.0.6",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
+    "react-speech-recognition": "^3.10.0",
     "react-toastify": "^10.0.6",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
@@ -58,6 +65,9 @@
     ]
   },
   "devDependencies": {
+    "@types/emoji-mart": "^3.0.14",
+    "@types/randomcolor": "^0.5.9",
+    "@types/react-speech-recognition": "^3.9.5",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15"
