--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "@emoji-mart/react": "^1.1.1",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
+    "@fortawesome/fontawesome-svg-core": "^6.7.1",
+    "@fortawesome/free-brands-svg-icons": "^6.7.1",
+    "@fortawesome/free-regular-svg-icons": "^6.7.1",
+    "@fortawesome/free-solid-svg-icons": "^6.7.1",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@microsoft/signalr": "^8.0.7",
     "@mui/icons-material": "^6.1.8",
     "@mui/material": "^6.1.8",
@@ -27,6 +32,7 @@
     "https-browserify": "^1.0.0",
     "ionicons": "^7.4.0",
     "jwt-decode": "^4.0.0",
+    "mdb-react-ui-kit": "^9.0.0",
     "randomcolor": "^0.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
