--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "antd": "^5.22.2",
     "assert": "^2.1.0",
     "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
     "date-fns": "^4.1.0",
     "emoji-picker-react": "^4.12.0",
     "framer-motion": "^11.11.17",
@@ -35,6 +36,7 @@
     "mdb-react-ui-kit": "^9.0.0",
     "randomcolor": "^0.6.2",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-motion-animate": "^1.0.6",
