--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "react-scripts": "5.0.1",
     "react-speech-recognition": "^3.10.0",
     "react-toastify": "^10.0.6",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "typescript": "^4.9.5",
