--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "typescript": "^4.9.5",
+    "uuid": "^11.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -80,6 +81,7 @@
     "@types/emoji-mart": "^3.0.14",
     "@types/randomcolor": "^0.5.9",
     "@types/react-speech-recognition": "^3.9.5",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15"
